# XenoCipher_Healthcare_IoT

./: .gitignore  XenoCipher_Healthcare_IoT.code-workspace  XenoCipher_Healthcare_IoT.ino  platformio.ini
Server/: .gitignore  CMakeLists.txt  main.cpp
lib/CryptoKDF/include/: crypto_kdf.h
lib/CryptoKDF/src/: crypto_kdf.cpp
lib/Entropy/include/: entropy.h
lib/Entropy/src/: entropy.cpp
lib/HMAC/include/: hmac.h
lib/HMAC/src/: hmac.cpp
lib/LFSR/include/: lfsr.h
lib/LFSR/src/: lfsr.cpp
lib/NTRU/include/: ntru.h
lib/NTRU/src/: ntru.cpp
lib/Tinkerbell/include/: tinkerbell.h
lib/Tinkerbell/src/: tinkerbell.cpp
lib/Transposition/include/: transposition.h
lib/Transposition/src/: transposition.cpp
lib/common/: common.h
server/: CMakeLists.txt  generate_key.cpp  main.cpp
src/: main.cpp
test/: chaotic_lfsr.h  lfsr_visualization.py  tinkerbell_visualization.py  transposition_visualization.py
